fix header spacing in merge page

--- a/css/merge.css
+++ b/css/merge.css
@@ -24,7 +24,7 @@ p {
   font-size: 16px;
   color: #777777;
 }
-a {
+#soon {
 	font-family: "SF";
    letter-spacing: 1.15px;
 	text-decoration: none;
